test_suite/tests/ui/with-variant/skip_de_newtype_field.stderr
error: variant `Newtype` cannot have both #[serde(deserialize_with)] and a field 0 marked with #[serde(skip_deserializing)]
 --> $DIR/skip_de_newtype_field.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

